--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "json-server": "^1.0.0-beta.3",
     "project": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db-server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
